--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,7 +4,7 @@
     @if (!joined()) {
     <div class="screen-home fade-in">
         <div class="fingerprint-icon">
-            <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#6c5ce7" stroke-width="1.5"
+            <!-- <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#6c5ce7" stroke-width="1.5"
                 stroke-linecap="round" stroke-linejoin="round">
                 <path d="M2 12C2 6.5 6.5 2 12 2a10 10 0 0 1 8 6" />
                 <path d="M5 19.5C5.5 18 6 15 6 12a6 6 0 0 1 .34-2" />
@@ -13,11 +13,12 @@
                 <path d="M16 22h1.8" />
                 <path d="M13 22.4c-.05-1-.26-2-.35-3" />
                 <path d="M9 12.5a4.5 4.5 0 0 1 6.8-2.6" />
-            </svg>
+            </svg> -->
+            <img src="assets/spy.png" alt="Spy" width="80%"/>
         </div>
         <h1>Who is the Spy?</h1>
         <div class="input-group">
-            <input [ngModel]="playerName()" (ngModelChange)="playerName.set($event)"
+            <input [ngModel]="playerName()" (ngModelChange)="onNameInput($event)" [class.input-error]="isNameError()"
                 placeholder="Nhập tên của bạn..." />
         </div>
 
@@ -28,10 +29,13 @@
         <div class="input-group fade-in">
             <label>ROOM ID</label>
             <input type="text" placeholder="Nhập 8 số mã phòng..." [value]="joinRoomInput()"
-                (input)="onlyNumberInput($event)" autofocus />
+                (input)="onRoomInput($event)" [class.input-error]="isRoomError()" autofocus />
         </div>
+
         <div class="row-btn">
-            <button class="btn-primary" [disabled]="joinRoomInput().length !== 8" (click)="joinRoom()">VÀO NGAY</button>
+            <button class="btn-primary" [disabled]="joinRoomInput().length !== 8" (click)="joinRoom()">
+                VÀO NGAY
+            </button>
             <button class="btn-text" (click)="viewMode.set('home')">Quay lại</button>
         </div>
         }
@@ -379,6 +383,8 @@
         </div>
     </div>
     }
+
+
     @if (showSettingsModal()) {
     <div class="modal-backdrop fade-in" (click)="closeSettings()">
         <div class="modal-content settings-modal" (click)="$event.stopPropagation()">
@@ -424,5 +430,18 @@
     </div>
     }
     }
+    @if (showErrorModal()) {
+    <div class="modal-backdrop fade-in" (click)="closeErrorModal()">
+        <div class="modal-content error-modal" (click)="$event.stopPropagation()">
 
+            <div class="icon-warning">⚠️</div>
+
+            <h3>RẤT TIẾC!</h3>
+
+            <p class="error-msg">{{ errorMessage() }}</p>
+
+            <button class="btn-primary mt-20" (click)="closeErrorModal()">Đã hiểu</button>
+        </div>
+    </div>
+    }
 </div>
