--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -13,8 +13,7 @@ $text-dark: #2d3436;
 $text-light: #636e72;
 
 // Font config
-$font-family-base: "Be Vietnam Pro", "Plus Jakarta Sans", "Segoe UI", Roboto,
-  Helvetica, Arial, sans-serif;
+$font-family-base: "Be Vietnam Pro";
 
 // --- GLOBAL RESET ---
 :host {
