--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -982,6 +982,7 @@ $font-family-base: "Be Vietnam Pro";
           border: none;
           font-size: 16px;
           font-weight: 800;
+          font-family: "Be Vietnam Pro";
           display: flex;
           align-items: center;
           gap: 10px;
